# redis-proxy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.local-build  Dockerfile.static  LICENSE  Makefile  README-BUILD.md  README.md  SECURITY.md  config.toml
docs/: build-guide.md  configuration.md  deployment.md
examples/: authenticated.toml  basic.toml  docker-compose.yml  run_examples.sh  ssl.toml
scripts/: build-local-static.sh  build-static.sh  quick-build.sh
src/: config.rs  lib.rs  main.rs  protocol.rs  proxy.rs
